src/objects/Invitations__c.object
<CustomObject>
    <description>Object to capture a summary of the number of invitations sent by type.</description>
    <fields>
        <fullName>Customer_Group_Proforma__c</fullName>
        <description>Related &quot;Customer Group&quot; record type of proforma for which these invitations apply</description>
        <label>Customer Group Proforma</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Proforma__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer Group Proforma</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Proforma__c</referenceTo>
        <relationshipLabel>Invitations</relationshipLabel>
        <relationshipName>Invitations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Invitation_Type__c</fullName>
        <description>Used to specify the type of invitation sent.</description>
        <label>Invitation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Phone Blast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Invitations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Invitations</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response_Rate__c</fullName>
        <formula>of_Responders__c / Sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invitation Redemption %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sent__c</fullName>
        <description>Used to capture the number of invitations sent.</description>
        <label>Invitations Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Responders__c</fullName>
        <description>Captures the number of people that responded to the invitation</description>
        <label>Invitation Responders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Invitation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>InvSum - {0}</displayFormat>
        <label>Invitation Summary ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invitations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>